<resources>
    <string name="app_name">Decoupled Android Search</string>
    <string name="invalid_search_filter">Invalid search filter</string>
    <string name="empty_search_filter">Empty search filter</string>
    <string name="no_content">No dogs found</string>
    <string name="item_dog_image_description">a image of a dog</string>
    <string name="dog_search">Dog Search</string>
    <string name="breed_hint">Breed</string>
    <string name="sub_breed_hint">Sub breed</string>
    <string name="anime_search">Anime search</string>
    <string name="anime_status_hint">Status</string>
    <string name="anime_rating_hint">Rating</string>
    <string name="anime_genre_hint">Genre</string>
    <string name="anime_name_hint">Name</string>
    <string name="anime_rating_search_error">It was not possible to fetch the available anime ratings</string>
    <string name="anime_genres_search_error">It was not possible to fetch the available anime genres</string>
    <string name="anime_episodes_label">Episodes:</string>
    <string name="anime_score_label">Score:</string>
    <string name="anime_score_upper_bound_separator">/</string>
    <string name="anime_score_upper_bound">10.0</string>
    <string name="search_button_label">Search</string>
</resources>